---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/linkage/test_static_block_scope_variables.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/linkage/test_static_block_scope_variables.c"
   (function-definition external
      f~0 `fn() -> int`
      (compound-statement
         (definition x~2 `int` (42 `int`))
         (return
            (combine `int`
               (combine `int`
                  (combine `int`
                     (assign `ptr<int>` (unnamed-temporary~4 `ptr<int>`)
                        (addressof `ptr<int>`
                           (x~2 `int`)))
                     (assign `int` (unnamed-temporary~5 `int`) (deref `int` (unnamed-temporary~4 `ptr<int>`))))
                  (combine `int`
                     (assign `ptr<int>` (unnamed-temporary~3 `ptr<int>`)
                        (addressof `ptr<int>`
                           (deref `int` (unnamed-temporary~4 `ptr<int>`))))
                     (assign `int` (deref `int` (unnamed-temporary~3 `ptr<int>`)) (add `int` (deref `int` (unnamed-temporary~3 `ptr<int>`)) (++ `int`)))))
               (unnamed-temporary~5 `int`)))))
   (function-definition external
      g~6 `fn() -> int`
      (compound-statement
         (definition x~8 `int` (27 `int`))
         (return
            (combine `int`
               (combine `int`
                  (combine `int`
                     (assign `ptr<int>` (unnamed-temporary~10 `ptr<int>`)
                        (addressof `ptr<int>`
                           (x~8 `int`)))
                     (assign `int` (unnamed-temporary~11 `int`) (deref `int` (unnamed-temporary~10 `ptr<int>`))))
                  (combine `int`
                     (assign `ptr<int>` (unnamed-temporary~9 `ptr<int>`)
                        (addressof `ptr<int>`
                           (deref `int` (unnamed-temporary~10 `ptr<int>`))))
                     (assign `int` (deref `int` (unnamed-temporary~9 `ptr<int>`)) (add `int` (deref `int` (unnamed-temporary~9 `ptr<int>`)) (++ `int`)))))
               (unnamed-temporary~11 `int`)))))
   (function-definition external
      main~12 `fn() -> int`
      (compound-statement
         (declaration external printf~14 `fn(∅: ptr<char const>, ...) -> int` ∅)
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~14 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 7>>`
                        (string `array<char; 7>` "%d %d\n\0"))))
               (call `int`
                  (addressof `ptr<fn() -> int>`
                     (f~0 `fn() -> int`)))
               (call `int`
                  (addressof `ptr<fn() -> int>`
                     (g~6 `fn() -> int`)))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~14 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 7>>`
                        (string `array<char; 7>` "%d %d\n\0"))))
               (call `int`
                  (addressof `ptr<fn() -> int>`
                     (f~0 `fn() -> int`)))
               (call `int`
                  (addressof `ptr<fn() -> int>`
                     (g~6 `fn() -> int`)))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~14 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 7>>`
                        (string `array<char; 7>` "%d %d\n\0"))))
               (call `int`
                  (addressof `ptr<fn() -> int>`
                     (f~0 `fn() -> int`)))
               (call `int`
                  (addressof `ptr<fn() -> int>`
                     (g~6 `fn() -> int`))))))))

----- stderr -----
